fixed modal close button z-index bug

--- a/assets/main.css
+++ b/assets/main.css
@@ -36,4 +36,7 @@ rood: f14441
 .home .hero-body {
   border-bottom: 1px solid black;
 }
+.modal.is-active {
+  z-index: 40;
+}
 
